V0.4.1 (A follow up update y 1 Visual: Adjust the home page layout to avoid overlapping y 2 Visual: Adjust the life page layout to avoid overlapping y 3 Visual: All the picture bacground has a black frame to make it looks nicer

--- a/Minister_Of_Health/Components/Pages/Home.razor.css
+++ b/Minister_Of_Health/Components/Pages/Home.razor.css
@@ -39,7 +39,7 @@
     background-color: black;
     font-size: 1.2em;
     font-style: italic;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     text-shadow: 1px 1px 3px black;
 }
 
@@ -48,8 +48,6 @@
     display: flex;
     justify-content: space-between;
     width: 600px; 
-    position: absolute;
-    top: 55%; 
 }
 
 .work-link, .life-link {
