--- a/Minister_Of_Health/Components/Pages/Life.razor.css
+++ b/Minister_Of_Health/Components/Pages/Life.razor.css
@@ -17,6 +17,7 @@
     background-color: rgba(0, 0, 0, 0.7);
     padding: 15px;
     border-radius: 5px;
+    max-width: 300px
 }
 
 .life-main-title {
